# pico-sdk

./: .gitmodules
blink/: CMakeLists.txt  main.c  main.cpp
multicore/: CMakeLists.txt  main.cpp
